codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__inline_banner_wrapped_and_truncated.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
                                            
  Choose how to continue working            
  A long description wraps to fit the       
  available terminal width.                 
  A long description wraps to fit the       
  available terminal width.                 
  A long description wraps to fit the       
  available terminal width.                 
  …                                         
› 1. Open usage settings                    
  2. Notify owner                           
                                            
  Press a number to choose · esc to dismiss 
                                            
› Ask Codex to do anything                  
                                            
  ? 查 看 快 捷 键              上 下 文 剩 余  100%
