codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 已 排 队 的 后 续 输 入                               
  ↳ Queued follow-up question                   
    ⌥ + ↑ 编 辑 最 后 一 条 排 队 消 息                   
                                                
› Ask Codex to do anything                      
                                                
  ? 查 看 快 捷 键                  上 下 文 剩 余  100%
