codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_timer_survives_hidden_row.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (42s • esc to interrupt)      
                                        
                                        
› Ask Codex to do anything              
                                        
  ? 查 看 快 捷 键          上 下 文 剩 余  100%
